<resources>
    <string name="app_name">Esports</string>

    <string name="FirebaseStorageProfilePictureFolder">profile_picture/</string>

    <!--Profile picture picker strings-->
    <string name="PickerTitle">Odaberi:</string>
    <string name="PickerGalleryOption">Galerija</string>
    <string name="PickerCameraOption">Slikaj kamerom</string>

    <!-- Start Activity strings -->
    <string name="StartActivityEmailTextView">E-mail: </string>
    <string name="StartActivityPasswordTextView">Lozinka: </string>
    <string name="StartActivityLoginButtonLabel">Prijavi se</string>
    <string name="StartActivitySignUpButtonLabel">Registracija</string>

    <!-- Sign Up Activity strings-->
    <string name="SignUpActivityDialogString">Obrada i spremanje podataka… Pričekajte!</string>
    <string name="SignUpActivityUsernameTextView">Username: </string>
    <string name="SignUpActivityEmailTextView">E-mail:</string>
    <string name="SignUpActivityPasswordTextView">Lozinka: </string>
    <string name="SignUpActivityRePasswordTextView">Ponovi lozinku: </string>
    <string name="SignUpActivityCreateAccountButton">Kreni</string>
    <string name="SignUpActivityImageSelect">Izaberi profilnu sliku: </string>
    <string name="SignUpActivityImageSelectDescription">Click za izbor</string>

    <!-- Search Activity strings -->
    <string name="SearchActivitySearchEditViewHint">Pretraži prijatelje</string>


    <!-- Main Activity Drawer strings -->
    <string name="navMenuLogOutString">Odjavi se</string>
    <string name="navMenuFriendsString">Prijatelji</string>
    <string name="navMenuEditProfileString">Uredi profil</string>
    <string name="navMenuUserString">Korisnički meni</string>

    <!-- Edit Profile Activity strings-->
    <string name="EditProfileSaveButtonLabel">Spremi</string>
    <string name="EditProfileEditViewHint">Unesi novi username</string>

    <string name="EditProfileChangeEmail">Promjeni e-mail</string>
    <string name="EditProfileChangeEmailHint">Za promjenu e-mail računa kliknite na ikonicu</string>

    <string name="EditProfileChangePassword">Promjeni lozinku</string>
    <string name="EditProfileChangePasswordHint">Za promjenu lozinke računa kliknite na ikonicu</string>


    <string name="EditProfileNoChanges">Nema promjene</string>
    <string name="EditProfileImageChange">Nova slika spremljena</string>
    <string name="EditProfileUsernameChange">Novi username spremljen</string>
    <string name="EditProfileAllChange">Spremljena nova slika i username</string>

    <!-- Details Activity strings-->
    <string name="DetailsGoingLabel">Dolazim</string>
    <string name="DetailsCantGoLabel">Ne dolazim</string>
    <string name="DetailsGoingUserAlertDialogLabel">Dolaze: </string>
    <string name="DetailsGoingInsertTextHit">Unesite vašu poruku</string>

    <!-- Add Event Activity strings-->
    <string name="AddEventName">Naziv</string>
    <string name="AddEventRadius">Radijus geofenca(m)</string>
    <string name="AddEventDuration">Trajanje geofenca (min)</string>
    <string name="AddEventNumberOfParticipants">Broj sudionika</string>
    <string name="AddEventTime">Vrijeme održavanja</string>
    <string name="AddEventSport">Sport</string>
    <string name="AddEventTimeError">Ne može u prošlost</string>
    <string name="AddEventTimeErrorMsg">Pogreška</string>

    <!-- Friend List Activity strings-->
    <string name="FriendListActivityZeroFriends">Nemate prijatelja. Potražite ih!</string>

    <!-- Map Activity strings -->
    <string name="MapAddEvent">Dodaj event</string>

    <!-- Shared Prefs Keys -->
    <string name="userID">userID</string>
    <string name="username">uName</string>

    <string name="facebook_app_id">601771230202732</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Postavke</string>

    <!-- TONIJEVE  novi:  AIzaSyAnuH0unRFu63K6oKwTGYOs57y7riNfI7o  star:AIzaSyB_U2fGTnYXmkdegx-pRCAIuKBLWcVSMr0 -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">   AIzaSyAnuH0unRFu63K6oKwTGYOs57y7riNfI7o  </string>


    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click to find out more about event
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="main_activity_title">News feed</string>
    <string name="activity_past_events_title">Prošli događaji</string>
    <string name="filter_events">Pretraži događaje</string>
    <string name="search_hint">Pretraži</string>
    <string name="edit_event_range_title">Udaljenost događaja</string>
    <string name="edit_event_range">Odredite maksimalnu udaljenost događaja na news feed-u</string>
    <string name="navbar_settings">Postavke</string>
    <string name="title_activity_friends_feed">Friends feed</string>
    <string name="navbar_friends_feed">Događaji prijatelja</string>


</resources>
