<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="KARTA GOOGLE" />
        <item
            android:id="@+id/nav_past_events"
            android:icon="@drawable/fui_done_check_mark"
            android:title="@string/activity_past_events_title" />

    </group>

    <item android:title="@string/navMenuUserString">
        <menu>

            <item
                android:id="@+id/nav_friends_list"
                android:icon="@drawable/ic_group_black"
                android:title="Moj Drugovi" />
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navMenuEditProfileString" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/navMenuLogOutString" />
        </menu>
    </item>

</menu>
