<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical"
    tools:context="hr.helloworld.david.esports.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="0.9">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:text="@string/SignUpActivityImageSelect"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/SignUpActivityImageSelector"
            android:contentDescription="@string/SignUpActivityImageSelectDescription"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:text="@string/SignUpActivityUsernameTextView"/>

        <EditText
            android:id="@+id/SignUpActivityUsernameEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:text="@string/SignUpActivityEmailTextView"/>

        <EditText
            android:id="@+id/SignUpActivityEmailEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:text="@string/SignUpActivityPasswordTextView"/>

        <EditText
            android:id="@+id/SignUpActivityPasswordEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:text="@string/SignUpActivityRePasswordTextView"/>

        <EditText
            android:id="@+id/SignUpActivityRePasswordEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_weight="0.1">

        <Button
            android:id="@+id/SignUpActivityCreateAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/SignUpActivityCreateAccountButton" />

    </LinearLayout>
</LinearLayout>
