<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="1"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center_vertical"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarEditProfileActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppTheme" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_horizontal"
        android:layout_weight="0.85">

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/EditProfileActivityImageSelector"
            android:contentDescription="@string/SignUpActivityImageSelectDescription"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextLabel"
            android:layout_gravity="start"
            android:text="@string/SignUpActivityUsernameTextView" />

        <EditText
            android:id="@+id/EditProfileActivityUsernameEditView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditProfileEditViewHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveChanges"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EditProfileSaveButtonLabel" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginStart="8dp"
                android:weightSum="1"
                android:orientation="horizontal"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_weight="0.8"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/EditProfileChangePassword" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:hint="@string/EditProfileChangePasswordHint" />

                </LinearLayout>

                <Button
                    android:id="@+id/resetPasswordButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableTop="@drawable/ic_mail_outline"
                    android:layout_weight="0.2" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/EditProfileActivityBottomLL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_weight="0.05" />


</LinearLayout>